<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".costUtilities.CostEditActivity">

    <Button
        android:id="@+id/buttonAddOrChangeCost"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDeleteCostOrBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextCostSum"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputSum"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditCategoryCost" />

    <Button
        android:id="@+id/buttonChangeDateCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/changeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYesterdayCost" />

    <Button
        android:id="@+id/buttonDayBeforeYesterdayCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/dayBeforeYesterday"
        app:layout_constraintBottom_toBottomOf="@+id/buttonYesterdayCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toEndOf="@+id/buttonYesterdayCost"
        app:layout_constraintTop_toTopOf="@+id/buttonYesterdayCost"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonTodayCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateCost" />

    <Button
        android:id="@+id/buttonYesterdayCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/yesterday"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTodayCost"
        app:layout_constraintStart_toEndOf="@+id/buttonTodayCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateCost"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextDateCost"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:hint="@string/inputDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCostSum" />

    <Spinner
        android:id="@+id/spinnerEditAccountCost"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:prompt="@string/chooseAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerEditCategoryCost"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:dropDownWidth="match_parent"
        android:prompt="@string/chooseCategory"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditAccountCost" />

    <EditText
        android:id="@+id/editTextCostComment"
        android:layout_width="351dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/inputComment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeDateCost"
        app:layout_constraintVertical_bias="0.136" />

</androidx.constraintlayout.widget.ConstraintLayout>