<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".costUtilities.CostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonGoToEditCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/plus"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGoToAllCostOperations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/allOperations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/fragmentCostSpinnerAccount"
            android:layout_width="232dp"
            android:layout_height="45dp"
            android:contentDescription="@string/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoToAllCostOperations" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChartCosts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentCostInitialDate">

        </com.github.mikephil.charting.charts.PieChart>

        <EditText
            android:id="@+id/fragmentCostInitialDate"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/initialDate"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoToEditCosts" />

        <EditText
            android:id="@+id/fragmentCostFinalDate"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/finalDate"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/fragmentCostInitialDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toEndOf="@+id/fragmentCostInitialDate"
            app:layout_constraintTop_toTopOf="@+id/fragmentCostInitialDate"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>