<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/itemCostCategory"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemCostAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemCostDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/date"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/itemCostSum"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/sum"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>